Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-54809

QPrinter corrupts some images ((due to lossy JPG encoding) when writing to PDF

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.13
    • 5.5.1
    • GUI: Printing
    • None
    • Linux/X11, macOS, Windows
    • 9cd527bc1f384926985d63c741641316a66f17a4

      Qt uses lossy encoding when writing images to a PDF file. I believe it forces JPG encoding, even if this is grossly inappropriate. This can lead to bad distortion of images in the output file and artefacts.

      This can mostly easily be seen when writing low pixel count images to a PDF file.

      Please provide an option to disable the lossy JPEG output and use PNG/Zlib instead.

      Attached is an example which uses a simple 3x3 image showing large differences from the also-written PNG file.

        1. test2.cpp
          0.9 kB
          Jeremy Sanders
        2. screenshot.png
          88 kB
          Jeremy Sanders
        3. qtbug54809.zip
          2 kB
          Friedemann Kleint
        4. qtbug54809_print.pdf
          2 kB
          Friedemann Kleint
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            anrocha André De La Rocha (Inactive)
            jeremysanders Jeremy Sanders
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes