Add support for generating PDFs with losslessly encoded images

This patch adds the QPainter::LosslessImageRendering flag to
QPainter::RenderHints and allows QPdfEngine to recognize it and encode
images using a lossless data compression algorithm provided by zlib
instead of using lossy JPEG compression, which can produce artifacts
with some images.

Task-number: QTBUG-54809
Change-Id: If9e2bc64da3bf3afcd5d6c74f0ee82336ef05a19
Reviewed-by: Lars Knoll <lars.knoll@qt.io>